Fix alignment for related searches and set min widths

--- a/style.css
+++ b/style.css
@@ -250,6 +250,10 @@ body {
     height: 257vh;
 }
 
+.result {
+    min-width: 580px;
+}
+
 .results >  {
     margin-bottom: 30px;
 }
@@ -300,15 +304,18 @@ body {
     font-size: 22px;
 }
 
-.related-1 {
-    margin-top: 8px;
-}
-
 .related {
     padding: 9px 0 9px;
     display: flex;
     align-items: center;
+    min-width: 580px;
 }
+
+.related-1 {
+    margin-top: 8px;
+}
+
+
 
 .related p {
     display: inline-flex;
@@ -345,13 +352,17 @@ body {
     line-height: 28px;
     font-size: 22px;
     color: #202124;
+    padding-bottom: 10px;
+    min-width: 580px;
 }
 
 .grid-suggest {
     display: grid;
-    grid-template-columns: 50% 50%;
+    min-width: 580px;
+    grid-template-columns: 48% 48%;
     grid-column-gap: 15px;
     grid-row-gap: 5px;
+    grid-auto-columns: 240px;
 }
 
 .suggest {
@@ -359,6 +370,7 @@ body {
     min-height: 48px;
     border-radius: 100px;
     padding: 0 17px;
+    overflow: hidden;
     height: 2em;
     display: flex;
     justify-content: left;
@@ -367,10 +379,16 @@ body {
 .suggest a {
     color: #202124;
     align-self: center;
+    overflow: hidden;
 }
 
 .suggest a b {
     font-weight: bold;
+    overflow: hidden;
+}
+
+.suggest a:hover {
+    text-decoration: underline;
 }
 
 .magnify-related {
